HelloUltraviolet/Fixtures/RejectedSource/Modules/StaticMissingTypeAnnotation/Expected.uv
//! Expected diagnostic metadata for the StaticMissingTypeAnnotation rejected-source specimen.

expectedDiagnostic("E-TYP-1505", "WF-StaticDecl-MissingType")
expectedDiagnostic("E-TYP-1505", "diagnostics.StaticDeclarations")
